apps/_base/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
---
