apps/_base/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  rules:
    - host: app.h18s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: http
---
